fixed beta generation by adding step for predicted move success (possibly incorrect)_

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,48 +9,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-19 19:24:23.591312: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2022-10-23 15:37:42.915792: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-10-19 19:24:23.672040: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2022-10-19 19:24:23.690216: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-10-19 19:24:24.975653: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
-      "2022-10-19 19:24:24.975780: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
-      "2022-10-19 19:24:24.975792: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2022-10-23 15:37:42.993744: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-10-23 15:37:43.012175: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-10-23 15:37:44.370549: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
+      "2022-10-23 15:37:44.370645: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
+      "2022-10-23 15:37:44.370653: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
    "source": [
     "from structs import MoonBoardRoute\n",
-    "from MoonBoardRNN.BetaMove.preprocessing_helper import generate_organized_sequence_data\n",
     "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors\n",
-    "from MoonBoardRNN.GradeNet.grade_net import GradeNet"
+    "from MoonBoardRNN.GradeNet.grade_net import GradeNet\n",
+    "from MoonBoardRNN.BetaMove.BetaMove import classify_and_reorganize_data_ga, generate_organized_sequence_data\n",
+    "from MoonBoardRNN.BetaMove.BetaMove import produce_sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After Beamer search, the most possible hand sequence and the successRate:\n",
-      "['F5', 'F5', 'C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
-      "[0, 0, 1, 2, 3, 4, 5, 7] ['LH', 'RH', 'LH', 'RH', 'LH', 'RH', 'LH', 'RH'] [83.49613078]\n"
+     "ename": "TypeError",
+     "evalue": "generate_organized_sequence_data() missing 1 required positional argument: 'save_path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m route \u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39mfrom_hold_strings(start_holds, others, end_holds)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m step1 \u001b[39m=\u001b[39m classify_and_reorganize_data_ga(route)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m step2 \u001b[39m=\u001b[39m generate_organized_sequence_data(step1)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: generate_organized_sequence_data() missing 1 required positional argument: 'save_path'"
      ]
     }
    ],
    "source": [
     "# Test Route - PULL YASELF UP! YAY, V4 set by Hoseok Lee\n",
+    "\n",
     "start_holds = ['F5']\n",
     "end_holds = ['D18']\n",
     "others = ['C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
     "route = MoonBoardRoute.from_hold_strings(start_holds, others, end_holds)\n",
-    "x_vectors = route_to_x_vectors(route)\n",
-    "net = GradeNet()\n",
-    "grade = net.grade_route(route)\n",
-    "print(grade)\n",
+    "step1 = classify_and_reorganize_data_ga(route)\n",
+    "step2 = generate_organized_sequence_data(step1)\n",
+    "print('')\n",
+    "# x_vectors = route_to_x_vectors(route)\n",
+    "# net = GradeNet()\n",
+    "# grade = net.grade_route(route)\n",
+    "# print(grade)\n",
     "#print(x_vectors)\n",
     "\n"
    ]
