--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,13 +9,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-23 17:51:13.713280: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "2022-10-23 20:36:35.015514: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-10-23 17:51:13.797281: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2022-10-23 17:51:13.814639: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-10-23 17:51:15.152060: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
-      "2022-10-23 17:51:15.152186: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
-      "2022-10-23 17:51:15.152196: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2022-10-23 20:36:35.346036: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-10-23 20:36:35.346056: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-10-23 20:36:35.387261: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-10-23 20:36:36.463048: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-10-23 20:36:36.463171: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-10-23 20:36:36.463183: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'generate_organized_sequence_data' from 'MoonBoardRNN.BetaMove.BetaMove' (/home/daniel/GeneticBoulders/MoonBoardRNN/BetaMove/BetaMove.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m \u001b[39mimport\u001b[39;00m route_to_x_vectors\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mGradeNet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgrade_net\u001b[39;00m \u001b[39mimport\u001b[39;00m GradeNet\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m \u001b[39mimport\u001b[39;00m classify_and_reorganize_data_ga, generate_organized_sequence_data\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m \u001b[39mimport\u001b[39;00m x_vectors_to_matrix\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m \u001b[39mimport\u001b[39;00m produce_sequence\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'generate_organized_sequence_data' from 'MoonBoardRNN.BetaMove.BetaMove' (/home/daniel/GeneticBoulders/MoonBoardRNN/BetaMove/BetaMove.py)"
      ]
     }
    ],
@@ -23,14 +35,14 @@
     "from structs import MoonBoardRoute\n",
     "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors\n",
     "from MoonBoardRNN.GradeNet.grade_net import GradeNet\n",
-    "from MoonBoardRNN.BetaMove.BetaMove import classify_and_reorganize_data_ga, generate_organized_sequence_data\n",
+    "from MoonBoardRNN.BetaMove.BetaMove import classify_and_reorganize_data_ga\n",
     "from MoonBoardRNN.BetaMove.BetaMove import x_vectors_to_matrix\n",
     "from MoonBoardRNN.BetaMove.BetaMove import produce_sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +119,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
