--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,19 +9,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-23 21:51:11.351377: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-10-24 11:01:13.357074: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-10-23 21:51:11.473991: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-10-23 21:51:11.474010: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2022-10-23 21:51:11.501237: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2022-10-23 21:51:12.213735: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-10-23 21:51:12.213798: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-10-23 21:51:12.213804: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2022-10-24 11:01:13.803942: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-10-24 11:01:13.804021: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-10-24 11:01:13.915624: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-10-24 11:01:15.511594: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-10-24 11:01:15.511662: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-10-24 11:01:15.511669: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
    "source": [
-    "from share.structs import MoonBoardRoute\n",
     "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors\n",
     "from MoonBoardRNN.GradeNet.grade_net import GradeNet\n",
     "from MoonBoardRNN.BetaMove.BetaMove import classify_and_reorganize_data_ga\n",
@@ -35,16 +34,29 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "ValueError",
+     "evalue": "MoonBoardHold(row=17, col=11) is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m rand_route \u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39mmake_random_valid()\n\u001b[0;32m----> 2\u001b[0m params \u001b[39m=\u001b[39m route_to_ME_params(rand_route)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(rand_route)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(params)\n",
+      "File \u001b[0;32m~/GeneticBoulders/MapElites/me_utils.py:33\u001b[0m, in \u001b[0;36mroute_to_ME_params\u001b[0;34m(route)\u001b[0m\n\u001b[1;32m     31\u001b[0m     arr\u001b[39m.\u001b[39mappend(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     32\u001b[0m arr\u001b[39m.\u001b[39mappend(nend)\n\u001b[0;32m---> 33\u001b[0m arr \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39;49mholds_to_indices(route\u001b[39m.\u001b[39;49mend_holds)\n\u001b[1;32m     34\u001b[0m \u001b[39mif\u001b[39;00m nend \u001b[39m<\u001b[39m \u001b[39m2\u001b[39m:\n\u001b[1;32m     35\u001b[0m     arr\u001b[39m.\u001b[39mappend(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "File \u001b[0;32m~/GeneticBoulders/share/moonboard_util.py:164\u001b[0m, in \u001b[0;36mMoonBoardRoute.holds_to_indices\u001b[0;34m(holds)\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mholds_to_indices\u001b[39m(holds: MoonBoardHolds) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[\u001b[39mint\u001b[39m]:\n\u001b[0;32m--> 164\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardRoute\u001b[39m.\u001b[39mhold_to_valid_index(h) \u001b[39mfor\u001b[39;00m h \u001b[39min\u001b[39;00m holds]\n",
+      "File \u001b[0;32m~/GeneticBoulders/share/moonboard_util.py:164\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mholds_to_indices\u001b[39m(holds: MoonBoardHolds) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[\u001b[39mint\u001b[39m]:\n\u001b[0;32m--> 164\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardRoute\u001b[39m.\u001b[39;49mhold_to_valid_index(h) \u001b[39mfor\u001b[39;00m h \u001b[39min\u001b[39;00m holds]\n",
+      "File \u001b[0;32m~/GeneticBoulders/share/moonboard_util.py:161\u001b[0m, in \u001b[0;36mMoonBoardRoute.hold_to_valid_index\u001b[0;34m(hold)\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhold_to_valid_index\u001b[39m(hold: MoonBoardHold) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[0;32m--> 161\u001b[0m     \u001b[39mreturn\u001b[39;00m MoonBoardRoute\u001b[39m.\u001b[39;49mINDEX_MAP_1D()\u001b[39m.\u001b[39;49mindex(hold)\n",
+      "\u001b[0;31mValueError\u001b[0m: MoonBoardHold(row=17, col=11) is not in list"
      ]
     }
    ],
    "source": [
+    "from share.moonboard_util import MoonBoardRoute\n",
+    "from MapElites.me_utils import *\n",
+    "\n",
     "rand_route = MoonBoardRoute.make_random_valid()\n",
-    "print()"
+    "params = route_to_ME_params(rand_route)\n",
+    "print(rand_route)\n",
+    "print(params)"
    ]
   },
   {
