wrote route conversion to and from me params

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -30,22 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "MoonBoardHold(row=17, col=11) is not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m rand_route \u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39mmake_random_valid()\n\u001b[0;32m----> 2\u001b[0m params \u001b[39m=\u001b[39m route_to_ME_params(rand_route)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(rand_route)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(params)\n",
-      "File \u001b[0;32m~/GeneticBoulders/MapElites/me_utils.py:33\u001b[0m, in \u001b[0;36mroute_to_ME_params\u001b[0;34m(route)\u001b[0m\n\u001b[1;32m     31\u001b[0m     arr\u001b[39m.\u001b[39mappend(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     32\u001b[0m arr\u001b[39m.\u001b[39mappend(nend)\n\u001b[0;32m---> 33\u001b[0m arr \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39;49mholds_to_indices(route\u001b[39m.\u001b[39;49mend_holds)\n\u001b[1;32m     34\u001b[0m \u001b[39mif\u001b[39;00m nend \u001b[39m<\u001b[39m \u001b[39m2\u001b[39m:\n\u001b[1;32m     35\u001b[0m     arr\u001b[39m.\u001b[39mappend(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m~/GeneticBoulders/share/moonboard_util.py:164\u001b[0m, in \u001b[0;36mMoonBoardRoute.holds_to_indices\u001b[0;34m(holds)\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mholds_to_indices\u001b[39m(holds: MoonBoardHolds) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[\u001b[39mint\u001b[39m]:\n\u001b[0;32m--> 164\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardRoute\u001b[39m.\u001b[39mhold_to_valid_index(h) \u001b[39mfor\u001b[39;00m h \u001b[39min\u001b[39;00m holds]\n",
-      "File \u001b[0;32m~/GeneticBoulders/share/moonboard_util.py:164\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mholds_to_indices\u001b[39m(holds: MoonBoardHolds) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m List[\u001b[39mint\u001b[39m]:\n\u001b[0;32m--> 164\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardRoute\u001b[39m.\u001b[39;49mhold_to_valid_index(h) \u001b[39mfor\u001b[39;00m h \u001b[39min\u001b[39;00m holds]\n",
-      "File \u001b[0;32m~/GeneticBoulders/share/moonboard_util.py:161\u001b[0m, in \u001b[0;36mMoonBoardRoute.hold_to_valid_index\u001b[0;34m(hold)\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhold_to_valid_index\u001b[39m(hold: MoonBoardHold) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[0;32m--> 161\u001b[0m     \u001b[39mreturn\u001b[39;00m MoonBoardRoute\u001b[39m.\u001b[39;49mINDEX_MAP_1D()\u001b[39m.\u001b[39;49mindex(hold)\n",
-      "\u001b[0;31mValueError\u001b[0m: MoonBoardHold(row=17, col=11) is not in list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=9, col=2), MoonBoardHold(row=9, col=1)], start_holds=[MoonBoardHold(row=1, col=10)], end_holds=[MoonBoardHold(row=17, col=9)], id=UUID('a957e71d-53ae-11ed-a652-2593e1076388'))\n",
+      "[1, 21, -1, 1, 196, -1, 2, 101, 100, -1, -1, -1, -1, -1, -1, -1, -1]\n",
+      "MoonBoardRoute(mid_holds=[101, 100], start_holds=[21], end_holds=[196], id=UUID('a957e71e-53ae-11ed-a652-2593e1076388'))\n",
+      "False\n"
      ]
     }
    ],
@@ -55,8 +50,11 @@
     "\n",
     "rand_route = MoonBoardRoute.make_random_valid()\n",
     "params = route_to_ME_params(rand_route)\n",
+    "deparasm = ME_params_to_route(params)\n",
     "print(rand_route)\n",
-    "print(params)"
+    "print(params)\n",
+    "print(deparasm)\n",
+    "print(deparasm == rand_route)"
    ]
   },
   {
